[#11739] fix(core): avoid duplicate entity change retries